<resources>
    <string name="app_name">Mascota</string>
    <string name="facebook_app_id">1118874444808766</string>
    <string name="google_api_key">AIzaSyA8SQnBoNts5HaBHUW0EiaAYqg0qrWe358</string>
    <string name="facebook_label">Facebook</string>
    <string name="link_signup">¿Aún no estás registrado?</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="error_email_login">ingrese un correo válido</string>
    <string name="error_password_login">debe estar entre 4 y 10 caracteres</string>
    <string name="loading_dialog_text">Cargando...</string>
    <string name="title_activity_datos_cuenta">Nuevo Usuario</string>
    <string name="name_label">Nombre</string>
    <string name="crear_usuario_label">Crear usuario</string>
    <string name="ya_tenes_usuario_link">¿Ya tenes un usuario? Inicia Sesión</string>
    <string name="title_activity_datos_personales">Datos Personales</string>
    <string name="telefono">Teléfono</string>
    <string name="registrar">Registrar</string>
    <string name="direccion">Dirección</string>
    <string name="piso">Piso</string>
    <string name="depto">Departamento</string>
    <string name="error_telefono_sigunp">entre 8 y 15 números</string>
    <string name="error_direccion_sigunp">ingrese una dirección valida</string>
    <string name="error_piso_sigunp">entre 0 y 3 números</string>
    <string name="error_depto_sigunp">entre 0 y 2 caracteres</string>
    <string name="error_conectividad_google_api">No se puede resolver la dirección, chequee su conectividad.</string>
    <string name="title_activity_adopcion">Adopciones</string>
    <string name="title_activity_agregar_adopcion">Publicar una adopción</string>
    <string name="title_activity_agregar_encontrada">Publicar una encontrada</string>
    <string name="title_activity_buscar_adopcion">Buscar Mascota</string>
    <string name="title_activity_home">Inicio</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_missing">Perdidos</string>
    <string name="title_activity_mascota_detalle">Detalle</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_pet">Agregar Mascota</string>
    <string name="action_search_pet">Buscar Mascota</string>
    <string name="action_confirm">Publicar</string>
    <string name="action_search">Buscar</string>
    <string name="openDrawer">Abrir Menu</string>
    <string name="closeDrawer">Cerrar Menu</string>
    <string name="filter_title">Filtrar</string>
    <string name="aply">Aplicar</string>
    <string name="restore">Restablecer</string>
    <string name="MASCOTA_ADOPCION_ERROR_EMPTY_NAME">Debe ingresar un nombre!</string>
    <string name="MASCOTA_ADOPCION_ERROR_EMPTY_DESCRIPTION">Debe ingresar una descripción!</string>
    <string name="MASCOTA_ADOPCION_ERROR_EMPTY_ADDRESS">Debe ingresar una dirección de último contacto!</string>
    <string name="MASCOTA_ADOPCION_TABLA_COL_NAME">Name</string>
    <string name="MASCOTA_ADOPCION_TABLA_COL_DESCRIPTION">Description</string>
    <string name="MASCOTA_ADOPCION_TABLA_COL_SPECIES">Species</string>
    <string name="MASCOTA_ADOPCION_TABLA_COL_SEXO">Sexo</string>
    <string name="MASCOTA_ADOPCION_TABLA_COL_AGE">Age</string>
    <string name="MASCOTA_ADOPCION_VIDEO_1">Link a video YouTube 1</string>
    <string name="MASCOTA_ADOPCION_VIDEO_2">Link a video YouTube 2</string>
    <string name="MASCOTA_ADOPCION_VIDEO_3">Link a video YouTube 3</string>
    <string name="error_conectividad">La operación no podrá continuar por problemas de conectividad.</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="no_data_available">No hay mascotas para mostrar</string>
    <string name="MASCOTA_SOLICITUD_ERROR_EMPTY_COMMENT">Debe ingresar un comentario!</string>
    <string name="subiendo_foto">Subiendo Fotos...</string>
    <string name="grabando_mascota">Grabando Mascota...</string>
    <string name="_0_3_months">0-3 meses</string>
    <string name="_4_6_months">4-6 meses</string>
    <string name="_7_12_months">7-12 meses</string>
    <string name="_1_3_years">1-3 años</string>
    <string name="_4_7_years">4-7 años</string>
    <string name="_8_15_years">8-15 años</string>
    <string name="dog">Perro</string>
    <string name="cat">Gato</string>
    <string name="pet_male">Macho</string>
    <string name="pet_female">Hembra</string>
    <string name="inicio_sesion_facebook_error">El inicio de sesion con facebook falló</string>
    <string name="error_saving_user">Error guardando usuario</string>
    <string name="error_uploading_photo">Ha ocurrido un error cargando la foto, intente nuevamente.</string>
    <string name="pet_name_label">Nombre</string>
    <string name="pet_description_label">Descripcion</string>
    <string name="pet_raza_label">Raza</string>
    <string name="pregunta_relacion_animales">¿Se lleva bien con otros animales?</string>
    <string name="pregunta_relacion_niños">¿Se lleva bien con los niños?</string>
    <string name="pregunta_relacion_animales_label">¿Se lleva bien con otros animales?</string>
    <string name="pregunta_relacion_niños_label">¿Se lleva bien con los niños?</string>
    <string name="comentarios_label">Comentarios</string>
    <string name="pregunta_medicina">¿Toma alguna medicina?</string>
    <string name="pregunta_periocidad">¿Con qué periodicidad?</string>
    <string name="pregunta_medicina_label">¿Toma alguna medicina?</string>
    <string name="pregunta_periocidad_label">¿Con qué periodicidad?</string>
    <string name="subir_foto">Subir Fotos</string>
    <string name="MASCOTA_ADOPCION_ERROR_OPCIONES_VACIAS">Debes seleccionar alguna opción</string>
    <string name="ERROR_FOTO_NO_INCLUIDA">Necesitamos una foto de tu mascota.</string>
    <string name="ERROR_FECHA_FUTURA">La última fecha conocida no puede ser futura.</string>
    <string name="ERROR">Error</string>
    <string name="ADVERTENCIA">Advertencia!</string>
    <string name="raza_desconocida">Desconocida</string>
    <string name="inf_social_title">Información Social</string>
    <string name="informacion_medica_title">Información Médica</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="ERROR_ALTA_MASCOTA">Error Grabando Mascota</string>
    <string name="ERROR_NO_CONECTIVIDAD_MENSAJE">Asegúrate que estas conectado a un red WI-FI o a la red de tu celular e intenta de nuevo.</string>
    <string name="title_activity_my_pets">Mis Mascotas</string>
    <string name="title_activity_my_adoptions">Adopciones</string>
    <string-array name="cats">
        <item>Desconocido</item>
        <item>Mezcla</item>
        <item>Abisinio</item>
        <item>Alemán de Pelo Largo</item>
        <item>American Curl</item>
        <item>American Shorthair</item>
        <item>American Wirehair</item>
        <item>Angora Turco</item>
        <item>Ashera</item>
        <item>Asiático Humo Atigrado</item>
        <item>Balinés</item>
        <item>Bengalí</item>
        <item>Bobtail Japonés</item>
        <item>Bombay</item>
        <item>Brasileño de Pelo Corto</item>
        <item>British Shorthair</item>
        <item>Burmés</item>
        <item>Burmilla</item>
        <item>California Spangled</item>
        <item>Ceilán</item>
        <item>Chartreux</item>
        <item>Chausie</item>
        <item>Colorpoint Shorthair</item>
        <item>Común Europeo</item>
        <item>Cornish Rex</item>
        <item>Cymric</item>
        <item>Devon Rex</item>
        <item>Exótico</item>
        <item>Foldex</item>
        <item>German Rex</item>
        <item>Habana</item>
        <item>Highland Fold</item>
        <item>Himalayo</item>
        <item>Javanes</item>
        <item>Khao Manee</item>
        <item>Korat</item>
        <item>Kurilian Bobtail</item>
        <item>LaPerm</item>
        <item>Maine Coon</item>
        <item>Manx</item>
        <item>Mau Egipcio</item>
        <item>Munchkin</item>
        <item>Nebelung</item>
        <item>Ocicat</item>
        <item>Oriental de Pelo Largo</item>
        <item>Persa</item>
        <item>Peterbald</item>
        <item>Pixie Bob</item>
        <item>Rabón Japonés</item>
        <item>Ragamuffin</item>
        <item>Ragdoll</item>
        <item>Ruso Azul</item>
        <item>Sagrado de Birmania</item>
        <item>Savannah</item>
        <item>Scottish Fold</item>
        <item>Selkirk Rex</item>
        <item>Serengeti</item>
        <item>Seychellois</item>
        <item>Siamés</item>
        <item>Siberiano</item>
        <item>Silvestre del Bosque de Noruega</item>
        <item>Singapura</item>
        <item>Skogkatt</item>
        <item>Snowshoe</item>
        <item>Sokoke</item>
        <item>Somalí</item>
        <item>Sphynx</item>
        <item>Thai</item>
        <item>Tonquinés</item>
        <item>Toyger</item>
        <item>Tricolor</item>
        <item>Van Turco</item>
        <item>York Chocolate</item>
    </string-array>
    <string name="title_activity_found">Encontradas</string>
</resources>