<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/title_activity_home" />

        <item
            android:id="@+id/drawer_adoptions"
            android:checked="false"
            android:icon="@drawable/ic_adoption"
            android:title="@string/title_activity_adopcion" />

        <item
            android:id="@+id/drawer_missing"
            android:checked="false"
            android:icon="@drawable/ic_missing"
            android:title="@string/title_activity_missing" />

        <item
            android:id="@+id/drawer_found"
            android:checked="false"
            android:icon="@drawable/ic_action_found"
            android:title="@string/title_activity_found" />

        <item
            android:id="@+id/drawer_my_pets"
            android:checked="false"
            android:icon="@drawable/ic_social"
            android:title="@string/title_activity_my_pets" />

        <!--<item
            android:id="@+id/drawer_profile"
            android:checked="false"
            android:icon="@drawable/ic_user"
            android:title="@string/title_activity_profile" />
        <item
            android:id="@+id/drawer_about"
            android:checked="false"
            android:icon="@drawable/ic_about"
            android:title="@string/title_activity_about" />
            -->
    </group>
</menu>