<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ar.uba.fi.nicodiaz.mascota.RegistrarDatosPersonalesActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <!-- Telefono Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/input_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion" />
        </android.support.design.widget.TextInputLayout>


        <TableLayout
            android:id="@+id/tbl_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/input_piso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/piso"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/input_depto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/depto" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


            </TableRow>
        </TableLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/registrar" />

    </LinearLayout>


</LinearLayout>