<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/informacion_medica_title" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/splash_screen_logo" />
        </RelativeLayout>

        <View style="@style/HorizontalDivider" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/lbMedicina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="5px"
                android:text="@string/pregunta_medicina_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rgMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rdNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/lbMedicinaTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="5px"
                android:text="@string/pregunta_periocidad_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rgMedicineTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rdPermanente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Permanente" />

                <RadioButton
                    android:id="@+id/rdTemporal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Temporal" />

                <RadioButton
                    android:id="@+id/rdNoToma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No toma medicina" />
            </RadioGroup>

        </android.support.design.widget.TextInputLayout>

        <!-- Comentarios -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/txtMedicineNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comentarios_label"
                android:inputType="textCapSentences|textMultiLine"
                android:gravity="top|start"
                android:maxLength="255" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>