<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_title"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aply"
                android:textSize="12sp"
                android:textColor="@color/ColorPrimary"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="?android:attr/borderlessButtonStyle"/>

        </RelativeLayout>

        <ExpandableListView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ExpandableListView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/filter_button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restore"
                android:textColor="@color/ColorPrimary"
                android:layout_gravity="center"
                style="?android:attr/borderlessButtonStyle"/>
            <ExpandableListView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>