<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="Videos" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/splash_screen_logo" />
        </RelativeLayout>

        <View style="@style/HorizontalDivider" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="Ingrese el ID del video de YouTube" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/txtVideoOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MASCOTA_ADOPCION_VIDEO_1"
                android:maxLength="255" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/txtVideoTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MASCOTA_ADOPCION_VIDEO_2"
                android:maxLength="255" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/txtVideoThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MASCOTA_ADOPCION_VIDEO_3"
                android:maxLength="255" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>